logo fix , gap try , hover  fix

--- a/public/stylesheets/Adminlogin.css
+++ b/public/stylesheets/Adminlogin.css
@@ -170,3 +170,6 @@ a.google span{
     }
     
 }
+.afterSignin{
+    width: 182px !important;
+}
